add preliminary display for bookmark

--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -13,6 +13,9 @@
     "default_title": "Sync Bookmarks",
     "default_popup": "popup.html"
   },
+  "background":{
+    "scripts": ["background.js"]
+  },
   "permissions": [
     "activeTab"
   ],
