--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -17,7 +17,8 @@
     "scripts": ["background.js"]
   },
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "storage"
   ],
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self';"
 }
