--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -18,7 +18,17 @@
   },
   "permissions": [
     "activeTab",
-    "storage"
+    "storage",
+    "identity",
+    "*://www.googleapis.com/*",
+    "*://accounts.google.com/*",
+    "*://apis.google.com/*"
   ],
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self';"
+  "content_security_policy": "script-src 'self' https://apis.google.com/ 'unsafe-eval'; object-src 'self';",
+  "applications": {
+    "gecko": {
+      "id": "sync-saved-windows@ricwtk",
+      "strict_min_version": "42.0"
+    }
+  }
 }
